fix: cutoff logos height on safari, color of footer

--- a/src/theme/scss/components/_backed-by-component.scss
+++ b/src/theme/scss/components/_backed-by-component.scss
@@ -40,7 +40,6 @@
     margin-bottom: 100px;
     img {
       height: 50px;
-      width: auto;
     }
 
     @include mobile {
